--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -23,12 +23,12 @@ a{
 	text-decoration: none;
 	border-bottom: 2px solid transparent;
 }
-main{
+#text {
 	width: 850px;
 	margin: 35px auto;
 }
 img{
-	margin: 40px 8px 0 8px;
+	margin: 0 8px;
 }
 p {
 font-family: "Droid Serif", serif;
@@ -65,4 +65,42 @@ font-size: 0;
 a:hover{
 	border-bottom: 2px solid white;
 
+}
+.board {
+	width: 1000px;
+	margin: 20px auto;
+}
+button{
+  border: 2px solid #00a6b3;
+  border-radius: 6px;
+  background: transparent;
+  color: black;
+  font-weight: bold;
+  padding: 16px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  cursor: pointer;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.button:hover {
+  background-color: #00a6b3;
+  color: white;
+  border: 2px solid #00a6b3;
+}
+#result{
+	height: 62px;
+	position: relative;
+}
+#box {
+	margin: 0;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 62px;
+	font-weight: bold;
+	font-size: 20px;
 }
